<resources>
    <string name="app_name">Quiz Manager</string>
    <string name="create">Creator Mode</string>
    <string name="attempt">Attempt Mode</string>
    <string name="math">Math Fun</string>
    <string name="R">Random</string>
    <string name="hint">Enter your answer</string>
    <string name="submitBtn">Submit</string>
    <string name="empty_message">No Subjects Here! Try Adding More Subjects</string>
    <string name="qmessage">No Questions Here! Try Adding More Questions</string>
    <string name="password_label">Password: </string>
    <string name="empty_password_error">Password Can\'t be Empty!</string>
    <string name="password_length_error">Password Length must be Between 8 and 15!</string>
    <string name="invalid_passsword_error">Invalid Password!</string>
    <string name="empty_title_error">Title Can\'t be Empty!</string>
    <string name="duplicate_title_error">Duplicate Title!</string>
    <string name="change_password_label">New Password: </string>
    <string name="old_password_label">Old Password: </string>
    <string name="empty_nomcq_error">No. of MCQs Can\'t be Empty!</string>
    <string name="empty_statement_error">Statement can\'t be empty</string>
    <string name="duplicate_statement_error">Duplicate Statement</string>
    <string name="empty_optionA_error">Option A can\'t be empty</string>
    <string name="empty_optionB_error">Option B can\'t be empty</string>
    <string name="empty_optionC_error">Option C can\'t be empty</string>
    <string name="empty_optionD_error">Option D can\'t be empty</string>
    <string name="statement_label">Statement: </string>
    <string name="optionA_label">Option A: </string>
    <string name="optionB_label">Option B: </string>
    <string name="optionC_label">Option C: </string>
    <string name="optionD_label">Option D: </string>
    <string name="reason_label">Reason: </string>
    <string name="add_sub_desc">A Button to Add Subject</string>
    <string name="edit_password_desc">A Button to Edit the Password</string>
    <string name="add_question_desc">A Button to Add New Question</string>
    <string name="dummy_subject_title">Subject Title</string>
    <string name="dummy_total_questions">Total Questions:</string>
    <string name="dummy_TQ_value">999</string>
    <string name="dummy_quiz_mcqs">Quiz MCQs:</string>
    <string name="dummy_QM_value">999</string>
    <string name="dummy_quiz_duration">Quiz Duration:</string>
    <string name="dummy_QD_value">00:00:00</string>
    <string name="subject_edit_desc">A Button to Edit a Subject</string>
    <string name="delete_question_desc">A button to delete a question</string>
    <string name="option_a_view">Option A</string>
    <string name="option_b_view">Option B</string>
    <string name="option_c_view">Option C</string>
    <string name="option_d_view">Option D</string>
    <string name="key_option_view">Key Option</string>
    <string name="reason_view">Reason</string>
    <string name="question_title_view">Question Title</string>
    <string name="question_edit">A Button to edit question title</string>
    <string name="question_delete_desc">A Button to delete question</string>
    <string name="statement_hint">Enter Question Statement</string>
    <string name="option_a_hint">Enter Option A</string>
    <string name="option_b_hint">Enter Option B</string>
    <string name="option_c_hint">Enter Option C</string>
    <string name="option_d_hint">Enter Option D</string>
    <string name="key_option_label">Key Option:</string>
    <string name="answer_reason_hint">Enter Answer Reason</string>
    <string name="quiz_duration_label">Quiz Duration:</string>
    <string name="hours">H</string>
    <string name="minutes">M</string>
    <string name="seconds">S</string>
    <string name="invalid_duration_error">Invalid Duration!</string>
    <string name="quiz_mcqs_label">Quiz MCQs:</string>
    <string name="subject_title_label">Subject Title:</string>
    <string name="subject_title_hint">Enter Subject Title</string>
    <string name="detail_statement_value">Statement of Question</string>
    <string name="detail_optionA_value">Option A of Question</string>
    <string name="detail_optionB_value">Option B of Question</string>
    <string name="detail_optionC_value">Option C of Question</string>
    <string name="detail_optionD_value">Option D of Question</string>
    <string name="detail_key_option_value">Correct Option of Question</string>
    <string name="detail_reason_value">Reason of Question Answer</string>

</resources>