<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/math4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/Creator"
            android:layout_width="213dp"
            android:layout_height="94dp"
            android:background="@drawable/main_buttons_background"
            android:onClick="GotoCreatorMode"
            android:text="@string/create"
            android:textColor="#ffffffff"
            android:layout_marginTop="100dp"
            />
        <Button
            android:id="@+id/Attempt"
            android:layout_width="161dp"
            android:layout_height="87dp"
            android:background="@drawable/main_buttons_background"
            android:onClick="GotoAttemptMode"
            android:text="@string/attempt"
            android:textColor="#ffffffff"
            android:layout_marginTop="30dp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Math"
            android:layout_width="188dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_buttons_background"
            android:onClick="GotoMathFun"
            android:text="@string/math"
            android:textColor="#ffffffff"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>